# polygon-io-client_rust

./: Cargo.toml  ReadMe.md
examples/: dividends_example.rs  ticker_news.rs  tickers_example.rs
src/: common.rs  dividends.rs  lib.rs  polygon_client.rs  rest_client.rs  ticker_details.rs  ticker_news.rs  tickers.rs  utils.rs
