[package]
name = "polygon-io-client_rust"
description = "Rust client library for polygon.io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.28", features = ["serde", "parsing", "macros", "formatting"] }
tokio = { version = "1.32.0", features = ["full"] }


[[example]]
name = "tickers_example"

[[example]]
name = "ticker_news"

[[example]]
name = "dividends_example"
